- Added leantta, tinytta, phd_thesis, metaclbench papers and bibtex
- Added award information about tinytrain

- Edited intro description

- Added AI projects

--- a/papers/bibs/jia_tinytta_neurips24.bib
+++ b/papers/bibs/jia_tinytta_neurips24.bib
@@ -1,6 +1,11 @@
 @inproceedings{jia2024tinytta,
-    title     = {TinyTTA: Efficient Test-time Adaptation via Early-exit Ensembles on Edge Devices},
-    author    = {Jia, Hong and Kwon, Young D. and Orsino, Alessio and Dang, Ting and Talia, Domenico and Mascolo, Cecilia},
-    booktitle = {Neural Information Processing Systems},
-    year      = {2024}
+ author = {Jia, Hong and Kwon, Young D. and Orsino, Alessio and Dang, Ting and Talia, Domenico and Mascolo, Cecilia},
+ booktitle = {Advances in Neural Information Processing Systems},
+ editor = {A. Globerson and L. Mackey and D. Belgrave and A. Fan and U. Paquet and J. Tomczak and C. Zhang},
+ pages = {43274--43299},
+ publisher = {Curran Associates, Inc.},
+ title = {TinyTTA: Efficient Test-time Adaptation via Early-exit Ensembles on Edge Devices},
+ url = {https://proceedings.neurips.cc/paper_files/paper/2024/file/4c454d34f3a4c8d6b4ca85a918e5d7ba-Paper-Conference.pdf},
+ volume = {37},
+ year = {2024}
 }
