added sensys 2023 phd forum paper and updated sec 2021 phd forum bib

--- a/papers/bibs/kwon_efficientMetaCL_sec21.bib
+++ b/papers/bibs/kwon_efficientMetaCL_sec21.bib
@@ -1,6 +1,7 @@
 @book{kwon_efficientMetaCL_sec21,
-    year = {2021},
     title = {Efficient Meta Continual Learning on the Edge},
+    booktitle={ACM/IEEE Symposium on Edge Computing},
+    year = {2021},
     language = {eng},
     author = {Kwon, Young D.},
     keywords = {Continual Learning, Quantization, Edge Computing},
